# QuantTrade

./: .gitignore  PROJECT_WORKLOG.md  README.md  README_DEV.md  pyproject.toml
configs/: settings.example.yaml
examples/: sample_aapl_daily.csv
src/quanttrade/: __init__.py  app.py  cli.py
src/quanttrade/audit/: __init__.py  logger.py
src/quanttrade/backtest/: __init__.py  engine.py  exporter.py
src/quanttrade/broker/: __init__.py  service.py
src/quanttrade/config/: __init__.py  loader.py  models.py
src/quanttrade/core/: __init__.py  exceptions.py  types.py
src/quanttrade/dashboard/: __init__.py  html.py  service.py
src/quanttrade/data/: __init__.py  importer.py  indicators.py  repository.py  schema.py  storage.py
src/quanttrade/execution/: __init__.py  simulator.py
src/quanttrade/notification/: service.py
src/quanttrade/risk/: __init__.py  base.py  engine.py
src/quanttrade/strategies/: __init__.py  atr_dtf.py  base.py
tests/: test_atr_dtf.py  test_config_loader.py  test_dashboard_html.py  test_dashboard_snapshot.py  test_data_import_and_backtest.py  test_execution_simulator.py  test_history_html.py
