[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quanttrade"
version = "0.1.0"
description = "Personal automated trading system scaffold"
readme = "README_DEV.md"
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]
dev = [
]

[project.scripts]
quanttrade = "quanttrade.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
